--- a/style.css
+++ b/style.css
@@ -1,7 +1,52 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    outline: 0;
+    font-family: 'Nunito',sans-serif;
+}
+body{
+    background-color: rgb(196, 228, 218);
+}
+.calc_body{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    background-color: rgb(104, 105, 165);
+    box-shadow: 2px 2px 8px rgba(8, 8, 8, 0.4);
+    border-radius: 8px;
+}
+.result{
+    background-color: black;
+    color: white;
+    border-radius: 8px 8px 0 0;
+    padding: 20px;
+    font-size: 2.5rem;
+}
+.buttons{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+}
+.buttons button{
+    padding: 30px;
+    font-size: 1.5rem;
+    text-align: center;
+    border: none;
+    transition: .2s all linear;
+}
+.buttons button:hover{
+    background-color: #d4d3d3;
+}
+.buttons button:active{
+    background-color: #b1b1b1;
+}
+.equal{
+    background-color: rgb(155, 15, 50);
+}
+
+/* 
 body{
   font-family: arial;
-}
-.student{
-  background-color: grey;
-  color: red;
-}
+  background-color: aqua;
+} */
